Fix tabs sometimes overlapping the version nr box

--- a/page/style.css
+++ b/page/style.css
@@ -565,6 +565,7 @@ td {
 div#tabs {
 	margin-left: -60px;
 	border: 0 none;
+	clear: both;
 }
 
 
